// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Integration: design doc samples 15.1 Basic Resource 1`] = `
"resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}
"
`;

exports[`Integration: design doc samples 15.2 References 1`] = `
"resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
}
"
`;

exports[`Integration: design doc samples 15.3 Variable/Locals 1`] = `
"variable "environment" {
  type    = string
  default = "dev"
}

locals {
  common_tags = {
    Environment = var.environment
  }
}
"
`;

exports[`Integration: design doc samples 15.4 innerText 1`] = `
"resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_security_group" "example" {
  name   = "example"
  vpc_id = aws_vpc.main.id

  dynamic "ingress" {
    for_each = var.additional_ports
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
}
"
`;

exports[`Integration: design doc samples 15.5 Provider Aliases 1`] = `
"provider "aws" {
  region = "ap-northeast-1"
}

provider "aws" {
  alias  = "virginia"
  region = "us-east-1"
}

resource "aws_instance" "tokyo" {
  ami           = "ami-xxx"
  instance_type = "t3.micro"
}

resource "aws_instance" "us" {
  ami           = "ami-yyy"
  instance_type = "t3.micro"
  provider      = aws.virginia
}
"
`;

exports[`Integration: design doc samples 15.6 depends_on 1`] = `
"resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_instance" "web" {
  ami           = "ami-xxx"
  instance_type = "t3.micro"
  depends_on    = [aws_vpc.main]
}
"
`;

exports[`Integration: design doc samples 15.7 Terraform Attribute 1`] = `
"terraform {
  required_version = ">= 1.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}
"
`;

exports[`Integration: design doc samples 15.8 Terraform innerText 1`] = `
"terraform {

      required_version = ">= 1.0"

      required_providers {
        aws = {
          source  = "hashicorp/aws"
          version = "~> 5.0"
        }
      }

      backend "s3" {
        bucket = "my-terraform-state"
        key    = "prod/terraform.tfstate"
        region = "ap-northeast-1"
      }
    
}
"
`;

exports[`Integration: design doc samples Escape: Terraform expressions in innerText 1`] = `
"resource "aws_instance" "example" {
  ami           = "\${var.ami_id}"
  instance_type = "\${var.instance_type}"
  tags = {
    Name = "\${var.project}-\${var.environment}"
  }
}
"
`;
